# SFML-Workshop

./: .gitignore  CMakeLists.txt  README.md  install-dependency.sh  makefile  setup.sh
App/: CMakeLists.txt  CMakeLists.txt.in
App/include/: App.h  App.hpp  main.hpp
App/src/: App.cpp  main.cpp
